--- a/templates/index.html
+++ b/templates/index.html
@@ -72,11 +72,14 @@
             try {
                 console.log("Sending request with text:", news);
 
-                const response = await fetch("http://127.0.0.1:5000/analyze", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ text: news })
-                });
+                const response = await fetch("https://fake-news-detector-gclq.onrender.com/analyze", { 
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({ text: news })
+        });
+
 
                 console.log("Response status:", response.status);
 
@@ -98,3 +101,4 @@
 
 </body>
 </html>
+
